checkstyle and deprecation